; ModuleID = '/home/carl/AnghaBench/reactos/drivers/bus/isapnp/extr_hardware.c_PeekByte.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/bus/isapnp/extr_hardware.c_PeekByte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @PeekByte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @PeekByte(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %18, %1
  %6 = load i32, i32* %4, align 4
  %7 = icmp slt i32 %6, 20
  br i1 %7, label %8, label %21

8:                                                ; preds = %5
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @ReadStatus(i32 %9)
  %11 = and i32 %10, 1
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %8
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @ReadResourceData(i32 %14)
  store i32 %15, i32* %2, align 4
  br label %22

16:                                               ; preds = %8
  %17 = call i32 (...) @HwDelay()
  br label %18

18:                                               ; preds = %16
  %19 = load i32, i32* %4, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %4, align 4
  br label %5

21:                                               ; preds = %5
  store i32 255, i32* %2, align 4
  br label %22

22:                                               ; preds = %21, %13
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @ReadStatus(i32) #1

declare dso_local i32 @ReadResourceData(i32) #1

declare dso_local i32 @HwDelay(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
